--- a/CMS/app/templates/edit_student.html
+++ b/CMS/app/templates/edit_student.html
@@ -1,28 +1,22 @@
-{% load crispy_forms_tags %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ user_type }} Sign Up</title>
+    <title>Edit Student Details</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    {% load crispy_forms_tags %}
 </head>
 <body>
-    <div class="container mt 5">
-
-       <center>
-           <h2 style="font-size:36px;">Student Sign Up</h2>
-       </center>
-
+    <div class="container">
+        <h4 class="center">Edit Student Details</h4>
         <form method="post">
             {% csrf_token %}
             {{ form|crispy }}
-            <br>
             <center>
-                 <button type="submit" class="btn btn-primary" style="width:150px;">Sign Up</button>
-                <br><br>
+                <button type="submit" class="btn">Save Changes</button>
             </center>
+            <br>
 
         </form>
     </div>
