--- a/CMS/app/templates/student_signup.html
+++ b/CMS/app/templates/student_signup.html
@@ -7,6 +7,11 @@
     <title>{{ user_type }} Sign Up</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<style>
+    #id_password1_helptext{
+        display:none;
+    }
+</style>
 </head>
 <body>
     <div class="container mt 5">
