--- a/CMS/app/templates/enrollments_list.html
+++ b/CMS/app/templates/enrollments_list.html
@@ -5,10 +5,15 @@
     <title>My Enrollments</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<style>
+    td,th{
+        border:1px solid lightgrey;
+    }
+</style>
 </head>
 <body>
     <div class="container">
-        <h3>My Enrollments</h3>
+        <h4 class="center">My Enrollments</h4>
         <table class="striped">
             <thead>
                 <tr>
