--- a/CMS/app/templates/add_course.html
+++ b/CMS/app/templates/add_course.html
@@ -9,11 +9,16 @@
 </head>
 <body>
     <div class="container">
-        <h3>Add New Course</h3>
+        <h4 class="center">Add New Course</h4>
+        <br>
         <form method="post">
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="btn">Add Course</button>
+            <br><br>
+            <center>
+                <button type="submit" class="btn" style="width:180px;">Add Course</button>
+            </center>
+
         </form>
     </div>
 </body>
