--- a/CMS/app/templates/professor_courses.html
+++ b/CMS/app/templates/professor_courses.html
@@ -8,30 +8,28 @@
 <style>
     td,th{
         border:1px solid lightgrey;
+        text-align:center;
     }
 </style>
 </head>
 <body>
     <div class="container">
-        <h4 class="center">Student Enrollments</h4>
+        <h4 class="center">Your courses</h4>
         <table class="striped">
             <thead>
                 <tr>
-                    <th>Student</th>
+
                     <th>Course Name</th>
                     <th>Course Description</th>
-                    <th>Date Enrolled</th>
                     <th>Credits</th>
                 </tr>
             </thead>
             <tbody>
-                {% for enrollment in enrollments %}
+                {% for course in courses %}
                 <tr>
-                    <td>{{ enrollment.student.first_name }} {{ enrollment.student.last_name }}</td>
-                    <td>{{ enrollment.course.course_name }}</td>
-                    <td>{{ enrollment.course.description }}</td>
-                    <td>{{ enrollment.date_enrolled }}</td>
-                    <td>{{ enrollment.course.credits }}</td>
+                    <td>{{ course.course_name }}</td>
+                    <td>{{ course.description }}</td>
+                    <td>{{ course.credits }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
