--- a/CMS/app/templates/professor_home.html
+++ b/CMS/app/templates/professor_home.html
@@ -63,6 +63,17 @@
                     </div>
                 </div>
             </div>
+                 <div class="col s12 m4">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title">See Courses</span>
+                        <p>View the list of courses you created for students.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="/professor/courses/" class="btn">View Courses</a>
+                    </div>
+                </div>
+            </div>
             <div class="col s12 m4">
                 <div class="card">
                     <div class="card-content">
