Showing the courses of each professor for the student and giving the enroll now button to enroll the professor course

--- a/CMS/app/templates/professor_enrollments.html
+++ b/CMS/app/templates/professor_enrollments.html
@@ -8,12 +8,13 @@
 <style>
     td,th{
         border:1px solid lightgrey;
+        text-align:center;
     }
 </style>
 </head>
 <body>
     <div class="container">
-        <h4 class="center">Student Enrollments</h4>
+        <h4 class="center">Your Enrolled Students</h4>
         <table class="striped">
             <thead>
                 <tr>
