--- a/CMS/app/templates/professor_courses_for_students.html
+++ b/CMS/app/templates/professor_courses_for_students.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Enrollments</title>
+    <title>Student Enrollments</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <style>
@@ -14,34 +14,32 @@
 </head>
 <body>
     <div class="container">
-        <h4 class="center">My Enrollments</h4>
+        <h4 class="center"><b>{{professor.first_name}}</b> courses</h4>
         <br>
         <table class="striped">
             <thead>
                 <tr>
-                    <th>Professor</th>
+
                     <th>Course Name</th>
                     <th>Course Description</th>
-                    <th>Date Enrolled</th>
                     <th>Credits</th>
+                    <th>#</th>
                 </tr>
             </thead>
             <tbody>
-                {% for enrollment in enrollments %}
+                {% for course in courses %}
                 <tr>
-                    <td>{{ enrollment.course.professor.first_name }} {{ enrollment.course.professor.last_name }}</td>
-                    <td>{{ enrollment.course.course_name }}</td>
-                    <td>{{ enrollment.course.description }}</td>
-                    <td>{{ enrollment.date_enrolled }}</td>
-                    <td>{{ enrollment.course.credits }}</td>
+                    <td>{{ course.course_name }}</td>
+                    <td>{{ course.description }}</td>
+                    <td>{{ course.credits }}</td>
+                    <td>
+                        <a href="/enroll/{{course.pk}}/">Enroll Now</a>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
-        <br><br>
-        <div class="center">
-            <a href="{% url 'student_home' %}" class="btn">Return to Home</a>
-        </div>
+
     </div>
 </body>
 </html>
