--- a/CMS/app/templates/professor_home.html
+++ b/CMS/app/templates/professor_home.html
@@ -66,7 +66,7 @@
                  <div class="col s12 m4">
                 <div class="card">
                     <div class="card-content">
-                        <span class="card-title">See Courses</span>
+                        <span class="card-title">See Your Courses</span>
                         <p>View the list of courses you created for students.</p>
                     </div>
                     <div class="card-action">
@@ -77,7 +77,7 @@
             <div class="col s12 m4">
                 <div class="card">
                     <div class="card-content">
-                        <span class="card-title">See Student Enrollments</span>
+                        <span class="card-title">See Enrolled Students</span>
                         <p>View the list of students enrolled in your courses.</p>
                     </div>
                     <div class="card-action">
