--- a/CMS/app/templates/professors_list.html
+++ b/CMS/app/templates/professors_list.html
@@ -8,6 +8,7 @@
 <style>
     td,th{
         border:1px solid lightgrey;
+        text-align:center;
     }
 </style>
 </head>
@@ -17,6 +18,7 @@
         <table class="striped">
             <thead>
                 <tr>
+                    <th>ID</th>
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Email</th>
@@ -27,12 +29,13 @@
             <tbody>
                 {% for professor in professors %}
                 <tr>
+                    <td>{{professor.pk}}</td>
                     <td>{{ professor.first_name }}</td>
                     <td>{{ professor.last_name }}</td>
                     <td>{{ professor.email }}</td>
                     <td>{{ professor.department }}</td>
                     <td>
-                        <a href="{% url 'professor' professor.id %}" class="btn">See Courses</a>
+                        <a href="{% url 'professor_courses' professor.id %}" class="btn">See Courses</a>
                     </td>
                 </tr>
                 {% endfor %}
